submit java-spring-boot-ru/configuration